--- a/New folder/dailydata.html
+++ b/New folder/dailydata.html
@@ -81,7 +81,7 @@
         <button onclick="window.location.href=''">predict water column</button>
     </div> -->
 </div>
-    <main>
+<!--     <main>
         <div class="sensor-data-container">
             <div class="sensor-data">
                 <span class="label">Flow Rate:</span>
@@ -100,7 +100,7 @@
                 <span id="temperature" class="value">-</span> <span>°C</span>
             </div>
         </div>
-    </main>
+    </main> -->
 
     <div class="header">
         <h1>Live Data Dashboard</h1>
