--- a/home.html
+++ b/home.html
@@ -43,6 +43,9 @@
                 <a href="map.html">
                     <span class="navtag">LOCATION</span>
                 </a>
+                <a href="https://pravaah-autoflow-aquifer-management.onrender.com/">
+                    <span class="navtag">PREDICTIVE ANALYSIS</span>
+                </a>
             </div>
         <div class="current-time" id="current-time">
             <div class="datetime">
